--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   "author": "Ben Greenier",
   "license": "MIT",
   "dependencies": {
+    "conar": "^1.0.0",
+    "faye-websocket": "^0.9.2",
     "http-proxy": "^1.8.1",
     "polo": "^0.7.1",
-    "uniformer": "0.0.5"
+    "request": "^2.53.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.1.0",
+    "express": "^4.11.2",
+    "body-parser": "^1.11.0",
+    "faye-websocket": "^0.9.2"
   }
 }
