--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "conar": "^1.0.0",
     "faye-websocket": "^0.9.2",
     "http-proxy": "^1.8.1",
-    "polo": "^0.7.1",
+    "mdns": "git://github.com/hashtag-include/node_mdns",
     "request": "^2.53.0"
   },
   "devDependencies": {
